fixed horizontal overflow problem

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -29,11 +29,12 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100vw;
   height: 100%;
+  max-width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 999999999;
+  overflow: hidden;
 }
 
 .disclaimer-hidden {
@@ -42,14 +43,15 @@
 }
 
 .disclaimer__box {
-  padding: 110px 50px;
+  margin-top: 50px;
+  padding: 60px 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  width: 600px;
-  height: 500px;
+  width: 550px;
+  height: 400px;
 }
 
 @media only screen and (max-width: 370px) {
@@ -57,3 +59,27 @@
     padding: 0px 10px 80px 10px;
   }
 }
+
+
+@media only screen and (max-width: 768px) {
+  .disclaimer__box {
+    width: 75%;
+  }
+}
+
+
+@media only screen and (max-width: 480px) {
+  .disclaimer__box {
+    width: 90%;
+    padding: 60px 30px;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .disclaimer__box {
+    width: 95%;
+    padding: 60px 10px;
+  }
+}
+
+
